--- a/admin/app/components/user-detail-personal-information.hbs
+++ b/admin/app/components/user-detail-personal-information.hbs
@@ -123,6 +123,42 @@
   {{/if}}
 </section>
 
+<section class="page-section mb_10 user-authentication-method">
+  <h2 class="page-section__title user-authentication-method__title">Méthodes de connexion</h2>
+  <div class="user-authentication-method__item" data-test-email>
+    <span>Adresse e-mail</span>
+    {{#if @user.hasEmailAuthenticationMethod}}
+      <FaIcon @icon="check-circle" class="user-authentication-method-item__check" />
+    {{else}}
+      <FaIcon @icon="times-circle" class="user-authentication-method-item__uncheck" />
+    {{/if}}
+  </div>
+  <div class="user-authentication-method__item" data-test-username>
+    <span>Identifiant</span>
+    {{#if @user.hasUsernameAuthenticationMethod}}
+      <FaIcon @icon="check-circle" class="user-authentication-method-item__check" />
+    {{else}}
+      <FaIcon @icon="times-circle" class="user-authentication-method-item__uncheck" />
+    {{/if}}
+  </div>
+  <div class="user-authentication-method__item" data-test-pole-emploi>
+    <span>Pôle Emploi</span>
+    {{#if @user.hasPoleEmploiAuthenticationMethod}}
+      <FaIcon @icon="check-circle" class="user-authentication-method-item__check" />
+    {{else}}
+      <FaIcon @icon="times-circle" class="user-authentication-method-item__uncheck" />
+    {{/if}}
+  </div>
+  <div class="user-authentication-method__item" data-test-mediacentre>
+    <span>Médiacentre</span>
+    {{#if @user.hasGARAuthenticationMethod}}
+      <FaIcon @icon="check-circle" class="user-authentication-method-item__check" />
+    {{else}}
+      <FaIcon @icon="times-circle" class="user-authentication-method-item__uncheck" />
+    {{/if}}
+  </div>
+</section>
+
 <section class="page-section mb_10">
   <header class="page-section__header">
     <h2 class="page-section__title">Informations élèves SCO</h2>
