--- a/mon-pix/app/templates/components/footer.hbs
+++ b/mon-pix/app/templates/components/footer.hbs
@@ -13,13 +13,13 @@
 
     <div class="footer-container__content">
       <div class="footer-container-content__navigation">
-        <a href="{{t 'navigation.footer.link-help-center'}}"
+        <a href="{{this.helpCenterUrl}}"
            target="_blank"
            class="footer-navigation__item" rel="noopener noreferrer">
           {{t 'navigation.footer.help-center'}}
         </a>
 
-        <a href="{{t 'navigation.footer.link-a11y'}}"
+        <a href="{{this.accessibilityUrl}}"
            target="_blank"
            class="footer-navigation__item" rel="noopener noreferrer">
           {{t 'navigation.footer.a11y'}}
