Display badgePartnerCompetences on the badge page of the admin

--- a/admin/app/components/badges/badge.hbs
+++ b/admin/app/components/badges/badge.hbs
@@ -47,6 +47,11 @@
           {{/each}}
         </tbody>
       </table>
+      <ul>
+      {{#each @badge.badgePartnerCompetences as |badgePartnerCompetence|}}
+        <li>{{badgePartnerCompetence.name}}</li>
+      {{/each}}
+      </ul>
     </div>
   </section>
 </main>
